# IBKRBot

./: .gitignore  BUILD_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF_TO_CLAUDE_CODE.md  INSTALL_LINUX_MAC.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.1.md  SECURITY.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  run_ibkrbot.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
ibkrbot/: __init__.py  main.py  smoke_test.py
ibkrbot/core/: alerts.py  auto_reconnect.py  config.py  config_backup.py  constants.py  data_sources.py  logging_setup.py  paths.py  plan.py  sound.py  system_tray.py  task_runner.py  trade_journal.py  update_checker.py
ibkrbot/core/features/: canceller.py  janitor.py  manager.py  placer.py  proposer.py  show_orders.py
ibkrbot/core/ibkr/: client.py  contracts.py  error_codes.py  orders.py
ibkrbot/core/visual/: chart.py
ibkrbot/resources/: config.default.json
ibkrbot/resources/docs/: README.txt  SETUP_CHECKLIST.txt  START_HERE.txt
ibkrbot/ui/: dialogs.py  logging_handler.py  main_window.py  theme.py
ibkrbot/ui/widgets/: __init__.py  portfolio_widget.py  watchlist_widget.py
scripts/: build_exe.bat  build_exe.sh  ibkrbot.spec  make_release_zip.bat
tests/: __init__.py  test_alerts.py  test_config_backup.py  test_trade_journal.py  test_update_checker.py
